# diagrammer

./: .env.example  .gitignore  PRD-init.md  README.md  advanced.md  db-init.sh  debug-logging.md  docker-compose.yml  lighthouse.config.js  package-lock.json  package.json  prd.md  test.html  todo.md
.github/workflows/: deploy.yml
.windsurf/rules/: diagrambot-autoprd.md  strong-young-ui.md
apps/api/: README.md  admin_routes.py  auth.py  auth_routes.py  console_logger.py  database.py  database_pg.py  export_service.py  llm_adapter.py  logging_config.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  search_routes.py  session_routes.py  stripe_routes.py  stripe_service.py  task_routes.py  user_routes.py
apps/web/: .env.local.backup  cookies.txt  env.example  middleware.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ClientLogger.tsx  GlobalHeader.tsx  diagram-generator.tsx  diagram-renderer.tsx  diagram-viewer.tsx  header.tsx  sidebar.tsx
apps/web/hooks/: i18n.tsx  theme.tsx  use-toast.tsx
apps/web/lib/: api-keys.ts  audit.ts  auth-guard.ts  auth.ts  backup.ts  cache.ts  entitlements.ts  fastapi-auth.ts  feature-flags.ts  frontend-logger.ts  logger.ts  monitoring.ts  rate-limit.ts  security.ts  sso.ts  stripe.ts  test-mode.ts  test-session.ts  webhooks.ts
apps/web/prisma/: schema.prisma
apps/web/styles/: theme.css
docs/: COMPLETION.md  api.md  deployment.md  oauth-guide.md  saas.md  test-mode-guide.md
scripts/: init-db.sql  setup-db.sh
(+74 files in other folders)
