[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "fastapi==0.104.1",
    "filelock==3.12.2",
    "httpx==0.25.2",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.6",
    "schedule==1.2.2",
    "stripe>=12.5.1",
    "structlog==23.2.0",
    "uvicorn[standard]==0.24.0",
]
